--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,12 @@ destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
-markdown: rdiscount
-rdiscount:
-  extensions:
-    - autolink
-    - footnotes
-    - smart
+markdown: redcarpet
+# rdiscount:
+#   extensions:
+#     - autolink
+#     - footnotes
+#     - smart
 pygments: false # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
