Update config and posts

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://ifyouseewendy.github.io
-title: Wendi's Blog
+title: Wendi's Notes
 subtitle: Being cutting edge.
 author: Wendi
 simple_search: https://www.google.com/search
