--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ markdown: redcarpet
 #     - autolink
 #     - footnotes
 #     - smart
-pygments: false # default python pygments have been replaced by pygments.rb
+pygments: true # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
