--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
-markdown: redcarpet
+markdown: kramdown
 # rdiscount:
 #   extensions:
 #     - autolink
