Update blog infos

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://ifyouseewendy.github.io
-title: Wendi's Notes
+url: http://blog.ifyouseewendy.com
+title: Wendi's Blog
 subtitle: Being cutting edge.
-author: Wendi
+author: wendi
 simple_search: https://www.google.com/search
 description:
   Just a place to note and share.
